--- a/SAP.WPF/MainWindow.xaml
+++ b/SAP.WPF/MainWindow.xaml
@@ -20,7 +20,7 @@
                 <RowDefinition Height="1.0*"/>
                 <RowDefinition Height="4.8*"/>
             </Grid.RowDefinitions>
-            <Border Grid.Row="0" Margin="10" 
+            <Border Grid.Row="0" Margin="30 10 0 0" 
                     CornerRadius="12"
                     Background="White">
                 <Grid 
@@ -29,7 +29,7 @@
                         <Button  Style="{DynamicResource MinimizedButton}" Click="btnMinimized"></Button>
                         <Button  Style="{DynamicResource MaximizedButton}" Click="btnNormal"></Button>
                         <Button  Style="{DynamicResource CloseButtun}" Click="btnShutDown" ></Button>
-                        <TextBlock Margin="250 0 0 0"
+                        <TextBlock Margin="0 0 0 0"
                                    HorizontalAlignment="Center"
                                    VerticalAlignment="Center"
                                    Text="Анализ курсов"  
@@ -40,28 +40,132 @@
                     </StackPanel>
                 </Grid>
             </Border>
-            <StackPanel Grid.Row="1" Margin="20 20 0 0" 
+
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="0.2*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                    <Border Grid.Column="0" Margin="35 15"
+                            VerticalAlignment="Center">
+                        <StackPanel>
+                            <TextBlock HorizontalAlignment ="Left"
+                                       FontSize="16"
+                                       Margin="2 0 0 0"
+                                       Foreground="White"
+                                       Text="Начальная дата"/>
+
+                            <DatePicker Margin="0"
+                                        Style="{DynamicResource MaterialDesignOutlinedDatePicker}"
+                                        FontSize="16"
+                                        MaxWidth="220"
+                                        Background="White"
+                                        FontFamily="JetBrains Mono"
+                                        IsEnabled="True"
+                                        VerticalAlignment="Bottom"
+                                        BorderThickness="0"
+                                        materialDesign:TextFieldAssist.HasOutlinedTextField="True"
+                                        materialDesign:DatePickerAssist.OutlinedBorderActiveThickness="0"
+                                    ></DatePicker>
+                        </StackPanel>
+                    </Border>
+
+                <Border Grid.Column="1"
+                        Margin="0 30"
+                        VerticalAlignment="Center">
+                    <TextBlock  Margin="8 0 8 0"
+                               Text="-"
+                               FontWeight="ExtraBold"
+                               FontSize="70"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Foreground="White"/>
+                </Border>
+                
+                <Border Grid.Column="2" 
+                        Margin="35 15"
+                        VerticalAlignment="Center" >
+                    <StackPanel>
+                        <TextBlock HorizontalAlignment ="Left"
+                                   FontSize="16"
+                                   Margin="2 0 0 0"
+                                   Foreground="White"
+                                   Text="Конечная дата"/>
+                        <DatePicker Margin="0"
+                                    Style="{DynamicResource MaterialDesignOutlinedDatePicker}"
+                                    FontSize="16"
+                                    MaxWidth="220"
+                                    Background="White"
+                                    FontFamily="JetBrains Mono"
+                                    IsEnabled="True"
+                                    VerticalAlignment="Bottom"
+                                    BorderThickness="0"
+                                    materialDesign:TextFieldAssist.HasOutlinedTextField="True"
+                                    materialDesign:DatePickerAssist.OutlinedBorderActiveThickness="0"
+                                ></DatePicker>
+                    </StackPanel>
+                </Border>
+
+                <Border Grid.Column="4" 
+                        Margin="35 15"
+                        VerticalAlignment="Center" >
+                    <StackPanel>
+                        <TextBlock HorizontalAlignment ="Left"
+                                   FontSize="16"
+                                   Margin="2 0 0 0"
+                                   Foreground="White"
+                                   Text="Валюта"/>
+                        <ComboBox Background="White" 
+                                  Style="{DynamicResource MaterialDesignOutlinedComboBox}"
+                                  FontFamily="JetBrains Mono"
+                                  FontSize="16">
+                            <ComboBoxItem Style="{DynamicResource MaterialDesignNavigationSecondaryListBoxItem}" IsSelected="True" Content="USD"/>
+                            <ComboBoxItem Style="{DynamicResource MaterialDesignNavigationSecondaryListBoxItem}" Content="UZS"/>
+                            <ComboBoxItem Style="{DynamicResource MaterialDesignNavigationSecondaryListBoxItem}" Content="RUB"/>
+                        </ComboBox>
+                    </StackPanel>
+                </Border>
+
+                <Border Grid.Column="5" 
+                        Margin="35 25 25 0"
+                        VerticalAlignment="Center" >
+                    <Button Style="{DynamicResource MaterialDesignRaisedSecondaryLightButton}"
+                            Background="White"
+                            Content="Получить"
+                            VerticalAlignment="Bottom"
+                            Foreground="Black"
+                            FontFamily="JetBrains Mono"
+                            FontSize="16"
+                            Height="52"
+                            BorderThickness="0"
+                            BorderBrush="Black"
+                            materialDesign:TextFieldAssist.HasOutlinedTextField="True"
+                            materialDesign:DatePickerAssist.OutlinedBorderActiveThickness="0"
+                            PreviewMouseDown="Button_PreviewMouseDown"
+                            PreviewMouseUp="Button_PreviewMouseUp"/>
+                </Border>
+            </Grid>
+            <!--<StackPanel Grid.Row="1" Margin="20 20 0 0" 
                         Orientation="Horizontal">
 
-                <StackPanel Background="Transparent"
-                            VerticalAlignment="Bottom">
-                    <TextBlock Style="{DynamicResource text}"
-                               Text="Начальная дата"
-                               Margin="2 0 0 5"/>
-                    <DatePicker Margin="2"
-                                Width="180"
-                                Style="{DynamicResource MaterialDesignOutlinedDatePicker}"
-                                Background="White"
-                                FontSize="16"
-                                FontFamily="JetBrains Mono"
-                                IsEnabled="True"
-                                VerticalAlignment="Bottom"
-                                BorderThickness="0"
-                                materialDesign:TextFieldAssist.HasOutlinedTextField="True"
-                                materialDesign:DatePickerAssist.OutlinedBorderActiveThickness="0"
-                 ></DatePicker>
-                </StackPanel>
-                <TextBlock Margin="8 0 8 0"
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                <Border Grid.Column="0"
+                           >
+                       
+                    </Border>
+               
+                <TextBlock Grid.Column="1" Margin="8 0 8 0"
                            Text="-"
                            FontWeight="ExtraBold"
                            FontSize="70"
@@ -69,7 +173,8 @@
                            VerticalAlignment="Center"
                            Foreground="White"/>
 
-                <StackPanel Background="Transparent"
+                <StackPanel Grid.Column="2"
+                            Background="Transparent"
                             VerticalAlignment="Bottom">
                     <TextBlock Style="{DynamicResource text}"
                                Text="Конечная дата"
@@ -89,7 +194,8 @@
                 ></DatePicker>
                 </StackPanel>
 
-                <StackPanel Background="Transparent"
+                <StackPanel Grid.Column="3"
+                            Background="Transparent"
                             Margin="150 0 0 0"
                             VerticalAlignment="Bottom">
                     <TextBlock Style="{DynamicResource text}"
@@ -108,9 +214,8 @@
 
                 </StackPanel>
 
-
-                <StackPanel Background="Transparent"
-                            Margin="100 0 0 0"
+                <Border Grid.Column="4"
+                            Background="Transparent"
                             VerticalAlignment="Bottom">
                     <Button Style="{DynamicResource MaterialDesignRaisedSecondaryLightButton}"
                             Background="White"
@@ -126,8 +231,9 @@
                             materialDesign:DatePickerAssist.OutlinedBorderActiveThickness="0"
                             PreviewMouseDown="Button_PreviewMouseDown"
                             PreviewMouseUp="Button_PreviewMouseUp"/>
-                </StackPanel>
-            </StackPanel>
+                </Border>
+                </Grid>
+            </StackPanel>-->
             <Grid Grid.Row="2" 
                   Margin="10">
                 <!--Main chart section-->
