--- a/SAP.WPF/MainWindow.xaml
+++ b/SAP.WPF/MainWindow.xaml
@@ -13,31 +13,43 @@
         WindowStartupLocation="CenterScreen"
         WindowState="Normal"
         Title="MainWindow"  Height="700" Width="1080">
-    <Border CornerRadius="5 5 0 0" Background="{DynamicResource MaterialDesign.Brush.Primary}">
+    <Border CornerRadius="5 5 0 0" 
+            Background="{DynamicResource MaterialDesign.Brush.Primary}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.8*"/>
                 <RowDefinition Height="1.0*"/>
                 <RowDefinition Height="4.8*"/>
             </Grid.RowDefinitions>
-            <Border Grid.Row="0" Margin="30 10 0 0" 
+            <Border Grid.Row="0" Margin="30 10 30 0" 
                     CornerRadius="12"
                     Background="White">
                 <Grid 
                       Background="Transparent">
-                    <StackPanel  Orientation="Horizontal">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="3*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Column="2"
+                                Margin="0 0 10 0"
+                                Orientation="Horizontal" 
+                                HorizontalAlignment="Right">
                         <Button  Style="{DynamicResource MinimizedButton}" Click="btnMinimized"></Button>
                         <Button  Style="{DynamicResource MaximizedButton}" Click="btnNormal"></Button>
-                        <Button  Style="{DynamicResource CloseButtun}" Click="btnShutDown" ></Button>
+                        <Button  Style="{DynamicResource CloseButtun}" Click="btnShutDown" Content="OChir"></Button>
+                   
+                    </StackPanel>
+                    <Border Grid.Column="1"
+                            VerticalAlignment="Center">
                         <TextBlock Margin="0 0 0 0"
                                    HorizontalAlignment="Center"
                                    VerticalAlignment="Center"
                                    Text="Анализ курсов"  
-                                   Foreground="Green" 
+                                   Foreground="#673AB7" 
                                    FontSize="24"
                                    FontFamily="JetBrains Mono"/>
-
-                    </StackPanel>
+                    </Border>
                 </Grid>
             </Border>
 
@@ -50,7 +62,7 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                    <Border Grid.Column="0" Margin="35 15"
+                    <Border Grid.Column="0" Margin="28 15"
                             VerticalAlignment="Center">
                         <StackPanel>
                             <TextBlock HorizontalAlignment ="Left"
@@ -70,7 +82,7 @@
                                         BorderThickness="0"
                                         materialDesign:TextFieldAssist.HasOutlinedTextField="True"
                                         materialDesign:DatePickerAssist.OutlinedBorderActiveThickness="0"
-                                    ></DatePicker>
+                                        SelectedDate="09/07/2021"></DatePicker>
                         </StackPanel>
                     </Border>
 
@@ -87,7 +99,7 @@
                 </Border>
                 
                 <Border Grid.Column="2" 
-                        Margin="35 15"
+                        Margin="28 15"
                         VerticalAlignment="Center" >
                     <StackPanel>
                         <TextBlock HorizontalAlignment ="Left"
@@ -107,7 +119,7 @@
                                     BorderThickness="0"
                                     materialDesign:TextFieldAssist.HasOutlinedTextField="True"
                                     materialDesign:DatePickerAssist.OutlinedBorderActiveThickness="0"
-                                ></DatePicker>
+                                    SelectedDate="09/07/2021"></DatePicker>
                     </StackPanel>
                 </Border>
 
@@ -126,7 +138,7 @@
                                   FontFamily="JetBrains Mono"
                                   FontSize="16"
                                   >
-                            <ComboBoxItem Style="{DynamicResource MaterialDesignNavigationSecondaryListBoxItem}" IsSelected="True" Content="USD" TabIndex="431"/>
+                            <ComboBoxItem Style="{DynamicResource MaterialDesignNavigationSecondaryListBoxItem}" Content="USD" TabIndex="431"/>
                             <ComboBoxItem Style="{DynamicResource MaterialDesignNavigationSecondaryListBoxItem}" Content="EUR" TabIndex="451"/>
                             <ComboBoxItem Style="{DynamicResource MaterialDesignNavigationSecondaryListBoxItem}" Content="RUB" TabIndex="456"/>
                         </ComboBox>
@@ -136,7 +148,8 @@
                 <Border Grid.Column="5" 
                         Margin="35 25 25 0"
                         VerticalAlignment="Center" >
-                    <Button Click="btnSendRequest"
+                    <Button x:Name="btnSendRequestName"
+                            Click="btnSendRequest"
                             Style="{DynamicResource MaterialDesignRaisedSecondaryLightButton}"
                             Background="White"
                             Content="Получить"
@@ -145,6 +158,7 @@
                             FontFamily="JetBrains Mono"
                             FontSize="16"
                             Height="52"
+                            IsEnabled="True"
                             BorderThickness="0"
                             BorderBrush="Black"
                             materialDesign:TextFieldAssist.HasOutlinedTextField="True"
@@ -153,92 +167,7 @@
                             PreviewMouseUp="Button_PreviewMouseUp"/>
                 </Border>
             </Grid>
-            <!--<StackPanel Grid.Row="1" Margin="20 20 0 0" 
-                        Orientation="Horizontal">
-
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                <Border Grid.Column="0"
-                           >
-                       
-                    </Border>
-               
-                <TextBlock Grid.Column="1" Margin="8 0 8 0"
-                           Text="-"
-                           FontWeight="ExtraBold"
-                           FontSize="70"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Foreground="White"/>
-
-                <StackPanel Grid.Column="2"
-                            Background="Transparent"
-                            VerticalAlignment="Bottom">
-                    <TextBlock Style="{DynamicResource text}"
-                               Text="Конечная дата"
-                               Margin="2 0 0 5"
-                               />
-                    <DatePicker Margin="2"
-                                Width="180"
-                                Style="{DynamicResource MaterialDesignOutlinedDatePicker}"
-                                Background="White"
-                                FontSize="16"
-                                VerticalAlignment="Bottom"
-                                FontFamily="JetBrains Mono"
-                                IsEnabled="True"
-                                BorderThickness="0"
-                                materialDesign:TextFieldAssist.HasOutlinedTextField="True"
-                                materialDesign:DatePickerAssist.OutlinedBorderActiveThickness="0"
-                ></DatePicker>
-                </StackPanel>
-
-                <StackPanel Grid.Column="3"
-                            Background="Transparent"
-                            Margin="150 0 0 0"
-                            VerticalAlignment="Bottom">
-                    <TextBlock Style="{DynamicResource text}"
-                               Text="Валюта"
-                               Margin="2 0 0 5"
-                                />
-                    <ComboBox Background="White" 
-                              Style="{DynamicResource MaterialDesignOutlinedComboBox}"
-                              Width="180"
-                              FontFamily="JetBrains Mono"
-                              FontSize="16">
-                        <ComboBoxItem Style="{DynamicResource MaterialDesignNavigationSecondaryListBoxItem}" IsSelected="True" Content="USD"/>
-                        <ComboBoxItem Style="{DynamicResource MaterialDesignNavigationSecondaryListBoxItem}" Content="UZS"/>
-                        <ComboBoxItem Style="{DynamicResource MaterialDesignNavigationSecondaryListBoxItem}" Content="RUB"/>
-                    </ComboBox>
-
-                </StackPanel>
-
-                <Border Grid.Column="4"
-                            Background="Transparent"
-                            VerticalAlignment="Bottom">
-                    <Button Style="{DynamicResource MaterialDesignRaisedSecondaryLightButton}"
-                            Background="White"
-                            Content="Получить"
-                            VerticalAlignment="Bottom"
-                            Foreground="Black"
-                            FontFamily="JetBrains Mono"
-                            FontSize="16"
-                            Height="52"
-                            BorderThickness="0"
-                            BorderBrush="Black"
-                            materialDesign:TextFieldAssist.HasOutlinedTextField="True"
-                            materialDesign:DatePickerAssist.OutlinedBorderActiveThickness="0"
-                            PreviewMouseDown="Button_PreviewMouseDown"
-                            PreviewMouseUp="Button_PreviewMouseUp"/>
-                </Border>
-                </Grid>
-            </StackPanel>-->
-            <Grid Grid.Row="2" 
+           <Grid Grid.Row="2" 
                   Margin="10">
                 <!--Main chart section-->
                 <lvc:CartesianChart x:Name="chart1" 
@@ -253,7 +182,7 @@
                     </lvc:CartesianChart.DataTooltip>
                     
                     <lvc:CartesianChart.AxisX>
-                        <lvc:Axis 
+                        <lvc:Axis MinValue="0"
                                   Foreground="#90a3b2" 
                                   ShowLabels="True">
                             <lvc:Axis.Separator>
@@ -277,18 +206,16 @@
                         </lvc:Axis>
                     </lvc:CartesianChart.AxisY>
              
-                    <lvc:CartesianChart.Series >
+                    <lvc:CartesianChart.Series>
                         <lvc:LineSeries x:Name="seller_post_dg"
-                               Opacity="0.1"
-                                Fill="#7B3AB7" 
+                                Opacity="0.1"
+                                Fill="#7B3AB8" 
                                 StrokeThickness="2"
                                 PointGeometrySize="8"
                                 Values="0"
-                                DataContext="wded">
+                                >
                             <lvc:LineSeries.Stroke>
-                                <LinearGradientBrush>
-                                    <GradientStop Color="PaleVioletRed" Offset="1"/>
-                                </LinearGradientBrush>
+                                <SolidColorBrush Color="#BF6199" />
                             </lvc:LineSeries.Stroke>
                         </lvc:LineSeries>
 
