--- a/SAP.WPF/MainWindow.xaml
+++ b/SAP.WPF/MainWindow.xaml
@@ -82,7 +82,7 @@
                                         BorderThickness="0"
                                         materialDesign:TextFieldAssist.HasOutlinedTextField="True"
                                         materialDesign:DatePickerAssist.OutlinedBorderActiveThickness="0"
-                                        SelectedDate="09/07/2021"></DatePicker>
+                                        ></DatePicker>
                         </StackPanel>
                     </Border>
 
@@ -119,7 +119,7 @@
                                     BorderThickness="0"
                                     materialDesign:TextFieldAssist.HasOutlinedTextField="True"
                                     materialDesign:DatePickerAssist.OutlinedBorderActiveThickness="0"
-                                    SelectedDate="09/07/2021"></DatePicker>
+                                    ></DatePicker>
                     </StackPanel>
                 </Border>
 
